# GenToolReal

./: .gitignore  POLICY_EXEC_SETUP.md  README.md  gemini_robotics_er.py  veo_frame_to_video.py
closed_loop/: INSTALL.md  README.md  _verify_full_plan.py  pyproject.toml  requirements.txt
closed_loop/closed_loop/: __init__.py  analytic_push.py  frames.py  inference.py  model.py  orientation.py  paths.py  policy.py  registry.py  scene.py  text_encoder.py  viz.py  xyz_normalization.py
closed_loop/deployment/: README.md  goal_pose_node_closed_loop.py  goal_pose_node_closed_loop_viz.py
cosmos_vlm/: README.md  __init__.py  (+2 more)
generative_str_pipeline/: .gitignore  Makefile  README.md  __init__.py  annotate_object_control_point.py  build_dataset_0008_brush_procedural.py  build_dataset_0009_brush_sweep_diverse.py  build_dataset_0010_brush_sweep_sim.py  build_dataset_0011_brush_sweep_reactive.py  build_dataset_0012_spatula_flip_reactive.py  build_dataset_0013_spoon_pour_reactive.py  build_dataset_0014_hammer_nail_reactive.py  pyproject.toml  render_reactive_rollout_viz.py  render_trajectory_point_video.py  sim_workspace.py  visualize_brush_trajectories.py  viz_brush_sweep_viser.py  viz_hammer_nail_viser.py  viz_spatula_flip_viser.py  viz_spoon_pour_viser.py
generative_str_pipeline/config/: models.yaml.example  sweep_matrix.example.yaml
generative_str_pipeline/docs/: CALIBRATION.md  STAGES.md
generative_str_pipeline/generative_str/: __init__.py  __main__.py  cam_k_io.py  capture_from_data.py  cli.py  depth_io.py  foundationpose_io.py  mde_align.py  orchestrate.py  pacific_time.py  paths.py  run_mde.py  run_mesh_sam3d.py  run_video_benchmark.py  run_video_gen.py
generative_str_pipeline/scripts/: init_run_directory.sh  run_dextoolbench_smoke.sh
generative_str_pipeline/sim_rollout/: __init__.py  build_brush_trajectory.py  build_scene.py  predict_firstframe_closedloop.py  predict_firstframe_viz.py  predict_waypoints.py  preview_brush_trajectory.py  render_rollout_trajectory.py  sample_flip_scenes.py  sample_hammer_scenes.py  sample_pour_scenes.py  sample_rl_scenes.py  verify_dataset_0010_sim.py  waypoint_to_pose.py
generative_str_pipeline/tests/: test_annotate_object_control_point.py  test_cam_k_io.py  test_foundationpose_io.py  test_mde_align.py  test_waypoint_to_pose.py
pose_track/: README.md  V2_SAM2.md  pyproject.toml
pose_track/pose_track/: __init__.py  bootstrap.py  cli.py  da2_worker.py  fp_run.py  layout.py  mask_from_depth.py  smooth_poses.py  video_frames.py
pose_track/pose_track.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+187 files in other folders)
